Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,32 +3,30 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
     <title>Ruel Luna by ruelluna</title>
   </head>
 
   <body>
+
     <header>
-      <div class="inner">
+      <div class="container">
         <h1>Ruel Luna</h1>
         <h2>Artisan. Practrepreneur.</h2>
-        <a href="https://github.com/ruelluna" class="button"><small>Follow me on</small> GitHub</a>
+
+        <section id="downloads">
+          <a href="https://github.com/ruelluna" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
       </div>
     </header>
 
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
-          <h3>
+    <div class="container">
+      <section id="main_content">
+        <h3>
 <a id="welcome-to-my-github-page" class="anchor" href="#welcome-to-my-github-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my Github page!</h3>
 
 <p>I'm Ruel Luna, 27, from Cebu, Philippines. (Check out my <a href="http://ruelluna.com">personal website</a>)</p>
@@ -48,16 +46,10 @@ Checkout my <a href="http://github.com/ruelluna">Github account</a> and see what
 
 <p>I recently formed a group here in Cebu whose sole interest is developing web applications using the Laravel Framework. The goal of the group is to help individuals to learn more about Laravel and other web technologies out there. We also help students to have adequate knowledge about programming. We do talks and meet ups once in awhile.
 If you're from Cebu and want to learn Laravel with friendly vernacular-speaking guys, <a href="https://laravel-cebu-slack.heroku.com">then join us</a>.</p>
-        </section>
-
-        <aside id="sidebar">
-          <a class="twitter-timeline" href="https://twitter.com/ruelluna" data-widget-id="245115302180954112">Tweets by @ruelluna</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-        </aside>
-      </div>
+      </section>
     </div>
 
-            <script type="text/javascript">
+              <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
           </script>
