--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>Ruel Luna by ruelluna</title>
+    <title>Ruel Luna</title>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
         <h2>Artisan. Practrepreneur.</h2>
 
         <section id="downloads">
-          <a href="https://github.com/ruelluna" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          <a href="https://github.com/ruelluna" class="btn btn-github"><span class="icon"></span>Follow me on GitHub</a>
         </section>
       </div>
     </header>
@@ -27,27 +27,48 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-to-my-github-page" class="anchor" href="#welcome-to-my-github-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my Github page!</h3>
+          <a id="welcome-to-my-github-page" class="anchor" href="#welcome-to-my-github-page" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+          Welcome to my Github page!
+          </h3>
 
-<p>I'm Ruel Luna, 27, from Cebu, Philippines. (Check out my <a href="http://ruelluna.com">personal website</a>)</p>
+          <p>I'm Ruel Luna, 27, from Cebu, Philippines. (Check out my <a href="http://ruelluna.com">personal website</a>)</p>
 
-<p>I'm a Web Developer, Team Lead and a Practrepreneur (you know, the one who practices Entrepreneurship).</p>
+          <p>I'm a Web Developer, Team Lead and a Practrepreneur (you know, the one who practices Entrepreneurship). Let's talk over a cup of coffee. :)</p>
 
-<p>I am currently handling a Team in <a href="http://binaryideasmobile.com/">Binary Ideas</a>. We develop websites, apps and do marketing for clients basical</p>
+          <p>
+            There are 4 techs I'm fond about:
+            <ul>
+              <li>Laravel</li>
+              <li>Angular JS</li>
+              <li>iOS App Development</li>
+              <li>Wordpress</li>
+            </ul>
 
-<p>This year(2015), I decided to fully pledge my time and effort to the open source world.
-Checkout my <a href="http://github.com/ruelluna">Github account</a> and see what you can do with my repos.</p>
+            I am not limited to these four. Contact me for more things I learned.
+          </p>
 
-<hr>
+          <p>I am currently handling a team in <a href="http://binaryideasmobile.com/">Binary Ideas</a>. We develop websites, apps and do marketing for clients.</p>
 
-<h2>
-<a id="laravel-cebu" class="anchor" href="#laravel-cebu" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://facebook.com/groups/laravelcebu">Laravel Cebu</a>
-</h2>
+          <p>Also, this year, 2015, I decided to part my time and effort to the open source world.
+          Checkout my <a href="http://github.com/ruelluna">Github account</a> and see what you can do with my repos.</p>
 
-<p>I recently formed a group here in Cebu whose sole interest is developing web applications using the Laravel Framework. The goal of the group is to help individuals to learn more about Laravel and other web technologies out there. We also help students to have adequate knowledge about programming. We do talks and meet ups once in awhile.
-If you're from Cebu and want to learn Laravel with friendly vernacular-speaking guys, <a href="https://laravel-cebu-slack.heroku.com">then join us</a>.</p>
+          <hr>
+
+          <h2>
+          <a id="laravel-cebu" class="anchor" href="#laravel-cebu" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="http://facebook.com/groups/laravelcebu">Laravel Cebu</a>
+          </h2>
+
+          <p>I recently formed a group here in Cebu whose sole interest is developing web applications using the Laravel Framework. The goal of the group is to help individuals to learn more about Laravel and other web technologies out there. We also help students to have adequate knowledge about programming. We do talks and meet ups once in awhile.
+          If you're from Cebu and want to learn Laravel with friendly vernacular-speaking guys, <a href="https://laravel-cebu-slack.heroku.com">then join us</a>.</p>
+      </section>
+
+      <section>
+        <a class="twitter-timeline" href="https://twitter.com/ruelluna" data-widget-id="245115302180954112">Tweets by @ruelluna</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
       </section>
     </div>
+
+
 
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
